// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserGroupsTab should match a snapshot where there is data 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mocked-styled-93 el-snack-holder"
      />
      <div
        class="el-flex-container el-flex-justify-between"
      >
        <h1
          class="el-text-base el-title"
        >
          SOME_NAME
           User Groups
        </h1>
      </div>
      <div
        class="el-fade-in el-mb11 el-table"
        data-has-call-to-action="false"
        data-has-expandable-action="true"
        data-num-columns-excl-action-col="3"
        role="table"
      >
        <div
          class="mocked-styled-101 el-table-headers-row"
          role="row"
        >
          <div
            aria-label="Group Name"
            class="mocked-styled-102 el-table-header"
            role="columnheader"
          >
            Group Name
          </div>
          <div
            aria-label="Description"
            class="mocked-styled-102 el-table-header"
            role="columnheader"
          >
            Description
          </div>
          <div
            aria-label="Member Count"
            class="mocked-styled-102 el-table-header"
            role="columnheader"
          >
            Member Count
          </div>
          <div
            class="mocked-styled-102 el-table-header"
            role="columnheader"
          >
            <span
              class="el-intent-default el-icon-new el-icon"
            >
              <svg
                fill="none"
                height="1em"
                role="img"
                title="Icon image with name settings"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M18.917 12.88c.08-.584.08-1.176 0-1.76l2.06-1.85a1 1 0 0 0 .25-1.27l-1.18-2a1 1 0 0 0-1.19-.45l-2.65.9a7.2 7.2 0 0 0-1.52-.89l-.55-2.76a1 1 0 0 0-1-.8h-2.34a1 1 0 0 0-1 .8l-.53 2.74a7.5 7.5 0 0 0-1.52.89l-2.65-.9a1 1 0 0 0-1.19.47l-1.18 2a1 1 0 0 0 .25 1.27l2.1 1.85a6.5 6.5 0 0 0 0 1.76l-2.1 1.85a1 1 0 0 0-.25 1.27l1.18 2a1 1 0 0 0 1.19.45l2.65-.9c.47.356.98.654 1.52.89l.55 2.74a1 1 0 0 0 1 .8h2.36a1 1 0 0 0 1-.8l.55-2.74a7.2 7.2 0 0 0 1.52-.89l2.65.9a1 1 0 0 0 1.15-.45l1.18-2a1 1 0 0 0-.25-1.27zM11.977 15a3 3 0 1 1 0-6 3 3 0 0 1 0 6"
                  fill="currentColor"
                />
              </svg>
            </span>
          </div>
        </div>
        <div
          class="mocked-styled-110 el-table-row-container"
          role="row"
        >
          <div
            class="mocked-styled-103 el-table-row"
          >
            <div
              class="el-table-cell-has-dark-text el-table-cell"
              role="cell"
            >
              <div
                class="mocked-styled-111 el-table-cell-content"
                data-narrow-label="Group Name"
              >
                MarketplaceAdmin
              </div>
            </div>
            <div
              class="el-table-cell-has-dark-text el-table-cell"
              role="cell"
            >
              <div
                class="mocked-styled-111 el-table-cell-content"
                data-narrow-label="Description"
              >
                Users who can administer the Reapit Marketplace for an organisation or organisation office group
              </div>
            </div>
            <div
              class="el-table-cell-has-dark-text el-table-cell"
              role="cell"
            >
              <div
                class="mocked-styled-111 el-table-cell-content"
                data-narrow-label="Member Count"
              >
                4
              </div>
            </div>
            <div
              class="mocked-styled-109 el-table-expandable-row-trigger-cell"
              role="cell"
              tabindex="0"
            >
              <span
                class="el-intent-default el-icon-new el-icon"
              >
                <svg
                  fill="none"
                  height="1em"
                  role="img"
                  title="Icon image with name more"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M7 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0M12 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4M19 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </div>
          </div>
          <div
            class="mocked-styled-113 el-table-expandable-row"
          >
            <div
              class="mocked-styled-114 el-table-expandable-container"
            >
              <form
                class="el-p8"
              >
                <h2
                  class="el-text-base el-subtitle"
                >
                  Edit User Group
                </h2>
                <p
                  class="el-text-base el-body-text el-has-grey-text el-has-section-margin"
                >
                  The list below contains all available member groups for your organisation. You can manage users associated to each group by selecting them from the list below.
                </p>
                <div
                  class="el-form-layout-has-margin el-fade-in el-form-layout"
                >
                  <div
                    class="mocked-styled-135 el-input-wrap-full"
                  >
                    <div
                      class="el-mb3 el-input-group"
                    >
                      <input
                        aria-label="Input type undefined"
                        class="mocked-styled-38 el-input"
                        id="test-static-id"
                        placeholder="Search"
                      />
                      <span
                        class="mocked-styled-4 el-icon"
                        style="font-size: 1rem;"
                      >
                        <svg
                          fill="none"
                          height="1em"
                          role="img"
                          style="font-size: 1rem;"
                          title="Icon image with name searchSystem"
                          viewBox="0 0 20 20"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="m19.756 18.578-5.688-5.687a7.88 7.88 0 0 0 1.765-4.973C15.833 3.553 12.281 0 7.917 0S0 3.553 0 7.918s3.552 7.916 7.917 7.916a7.88 7.88 0 0 0 4.973-1.765l5.687 5.688a.83.83 0 0 0 1.179 0 .83.83 0 0 0 0-1.179m-11.84-4.41a6.256 6.256 0 0 1-6.25-6.25 6.256 6.256 0 0 1 6.25-6.25 6.256 6.256 0 0 1 6.25 6.25 6.256 6.256 0 0 1-6.25 6.25"
                            fill="currentColor"
                          />
                        </svg>
                      </span>
                      <label
                        class="mocked-styled-41 el-label"
                        for="test-static-id"
                      >
                        Users
                      </label>
                    </div>
                    <div
                      class="mocked-styled-58 el-multi-select-input-wrapper"
                    >
                      <input
                        class="mocked-styled-57 el-multi-select-input"
                        id="user-groups-ids-MarketplaceAdmin"
                        name="userIds"
                      />
                      <div
                        aria-label="Multi selected options"
                        class="mocked-styled-55 el-multi-select-selected"
                        role="listbox"
                      >
                        <input
                          aria-checked="true"
                          aria-hidden="true"
                          checked=""
                          class="mocked-styled-52 el-multi-select-checkbox"
                          id="multi-select-chip-MarketplaceAdmin"
                          role="option"
                          type="checkbox"
                        />
                        <label
                          class="mocked-styled-53 el-multi-select-label"
                          for="multi-select-chip-MarketplaceAdmin"
                          role="option"
                          tabindex="0"
                        />
                        <input
                          aria-checked="true"
                          aria-hidden="true"
                          checked=""
                          class="mocked-styled-52 el-multi-select-checkbox"
                          id="multi-select-chip-OrganisationAdmin"
                          role="option"
                          type="checkbox"
                        />
                        <label
                          class="mocked-styled-53 el-multi-select-label"
                          for="multi-select-chip-OrganisationAdmin"
                          role="option"
                          tabindex="0"
                        />
                        <input
                          aria-checked="true"
                          aria-hidden="true"
                          checked=""
                          class="mocked-styled-52 el-multi-select-checkbox"
                          id="multi-select-chip-ReapitUserAdmin"
                          role="option"
                          type="checkbox"
                        />
                        <label
                          class="mocked-styled-53 el-multi-select-label"
                          for="multi-select-chip-ReapitUserAdmin"
                          role="option"
                          tabindex="0"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="mocked-styled-2 el-button-group"
                >
                  <div
                    class="el-button-group-align-right el-button-group-inner"
                  >
                    <button
                      class="el-intent-neutral el-button"
                      type="button"
                    >
                      <div
                        class="mocked-styled-0 el-button-loader"
                      />
                      Cancel
                    </button>
                    <button
                      class="el-intent-primary el-button"
                      type="submit"
                    >
                      <div
                        class="mocked-styled-0 el-button-loader"
                      />
                      Submit
                    </button>
                  </div>
                </div>
              </form>
            </div>
          </div>
        </div>
        <div
          class="mocked-styled-110 el-table-row-container"
          role="row"
        >
          <div
            class="mocked-styled-103 el-table-row"
          >
            <div
              class="el-table-cell-has-dark-text el-table-cell"
              role="cell"
            >
              <div
                class="mocked-styled-111 el-table-cell-content"
                data-narrow-label="Group Name"
              >
                OrganisationAdmin
              </div>
            </div>
            <div
              class="el-table-cell-has-dark-text el-table-cell"
              role="cell"
            >
              <div
                class="mocked-styled-111 el-table-cell-content"
                data-narrow-label="Description"
              >
                Users who can administer an organisation
              </div>
            </div>
            <div
              class="el-table-cell-has-dark-text el-table-cell"
              role="cell"
            >
              <div
                class="mocked-styled-111 el-table-cell-content"
                data-narrow-label="Member Count"
              >
                1
              </div>
            </div>
            <div
              class="mocked-styled-109 el-table-expandable-row-trigger-cell"
              role="cell"
              tabindex="0"
            >
              <span
                class="el-intent-default el-icon-new el-icon"
              >
                <svg
                  fill="none"
                  height="1em"
                  role="img"
                  title="Icon image with name more"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M7 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0M12 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4M19 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </div>
          </div>
          <div
            class="mocked-styled-113 el-table-expandable-row"
          >
            <div
              class="mocked-styled-114 el-table-expandable-container"
            >
              <form
                class="el-p8"
              >
                <h2
                  class="el-text-base el-subtitle"
                >
                  Edit User Group
                </h2>
                <p
                  class="el-text-base el-body-text el-has-grey-text el-has-section-margin"
                >
                  The list below contains all available member groups for your organisation. You can manage users associated to each group by selecting them from the list below.
                </p>
                <div
                  class="el-form-layout-has-margin el-fade-in el-form-layout"
                >
                  <div
                    class="mocked-styled-135 el-input-wrap-full"
                  >
                    <div
                      class="el-mb3 el-input-group"
                    >
                      <input
                        aria-label="Input type undefined"
                        class="mocked-styled-38 el-input"
                        id="test-static-id"
                        placeholder="Search"
                      />
                      <span
                        class="mocked-styled-4 el-icon"
                        style="font-size: 1rem;"
                      >
                        <svg
                          fill="none"
                          height="1em"
                          role="img"
                          style="font-size: 1rem;"
                          title="Icon image with name searchSystem"
                          viewBox="0 0 20 20"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="m19.756 18.578-5.688-5.687a7.88 7.88 0 0 0 1.765-4.973C15.833 3.553 12.281 0 7.917 0S0 3.553 0 7.918s3.552 7.916 7.917 7.916a7.88 7.88 0 0 0 4.973-1.765l5.687 5.688a.83.83 0 0 0 1.179 0 .83.83 0 0 0 0-1.179m-11.84-4.41a6.256 6.256 0 0 1-6.25-6.25 6.256 6.256 0 0 1 6.25-6.25 6.256 6.256 0 0 1 6.25 6.25 6.256 6.256 0 0 1-6.25 6.25"
                            fill="currentColor"
                          />
                        </svg>
                      </span>
                      <label
                        class="mocked-styled-41 el-label"
                        for="test-static-id"
                      >
                        Users
                      </label>
                    </div>
                    <div
                      class="mocked-styled-58 el-multi-select-input-wrapper"
                    >
                      <input
                        class="mocked-styled-57 el-multi-select-input"
                        id="user-groups-ids-OrganisationAdmin"
                        name="userIds"
                      />
                      <div
                        aria-label="Multi selected options"
                        class="mocked-styled-55 el-multi-select-selected"
                        role="listbox"
                      >
                        <input
                          aria-checked="true"
                          aria-hidden="true"
                          checked=""
                          class="mocked-styled-52 el-multi-select-checkbox"
                          id="multi-select-chip-MarketplaceAdmin"
                          role="option"
                          type="checkbox"
                        />
                        <label
                          class="mocked-styled-53 el-multi-select-label"
                          for="multi-select-chip-MarketplaceAdmin"
                          role="option"
                          tabindex="0"
                        />
                        <input
                          aria-checked="true"
                          aria-hidden="true"
                          checked=""
                          class="mocked-styled-52 el-multi-select-checkbox"
                          id="multi-select-chip-OrganisationAdmin"
                          role="option"
                          type="checkbox"
                        />
                        <label
                          class="mocked-styled-53 el-multi-select-label"
                          for="multi-select-chip-OrganisationAdmin"
                          role="option"
                          tabindex="0"
                        />
                        <input
                          aria-checked="true"
                          aria-hidden="true"
                          checked=""
                          class="mocked-styled-52 el-multi-select-checkbox"
                          id="multi-select-chip-ReapitUserAdmin"
                          role="option"
                          type="checkbox"
                        />
                        <label
                          class="mocked-styled-53 el-multi-select-label"
                          for="multi-select-chip-ReapitUserAdmin"
                          role="option"
                          tabindex="0"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="mocked-styled-2 el-button-group"
                >
                  <div
                    class="el-button-group-align-right el-button-group-inner"
                  >
                    <button
                      class="el-intent-neutral el-button"
                      type="button"
                    >
                      <div
                        class="mocked-styled-0 el-button-loader"
                      />
                      Cancel
                    </button>
                    <button
                      class="el-intent-primary el-button"
                      type="submit"
                    >
                      <div
                        class="mocked-styled-0 el-button-loader"
                      />
                      Submit
                    </button>
                  </div>
                </div>
              </form>
            </div>
          </div>
        </div>
        <div
          class="mocked-styled-110 el-table-row-container"
          role="row"
        >
          <div
            class="mocked-styled-103 el-table-row"
          >
            <div
              class="el-table-cell-has-dark-text el-table-cell"
              role="cell"
            >
              <div
                class="mocked-styled-111 el-table-cell-content"
                data-narrow-label="Group Name"
              >
                ReapitUserAdmin
              </div>
            </div>
            <div
              class="el-table-cell-has-dark-text el-table-cell"
              role="cell"
            >
              <div
                class="mocked-styled-111 el-table-cell-content"
                data-narrow-label="Description"
              >
                Users who are Reapit customers who can perform admin Foundations actions
              </div>
            </div>
            <div
              class="el-table-cell-has-dark-text el-table-cell"
              role="cell"
            >
              <div
                class="mocked-styled-111 el-table-cell-content"
                data-narrow-label="Member Count"
              >
                3
              </div>
            </div>
            <div
              class="mocked-styled-109 el-table-expandable-row-trigger-cell"
              role="cell"
              tabindex="0"
            >
              <span
                class="el-intent-default el-icon-new el-icon"
              >
                <svg
                  fill="none"
                  height="1em"
                  role="img"
                  title="Icon image with name more"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M7 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0M12 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4M19 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </div>
          </div>
          <div
            class="mocked-styled-113 el-table-expandable-row"
          >
            <div
              class="mocked-styled-114 el-table-expandable-container"
            >
              <form
                class="el-p8"
              >
                <h2
                  class="el-text-base el-subtitle"
                >
                  Edit User Group
                </h2>
                <p
                  class="el-text-base el-body-text el-has-grey-text el-has-section-margin"
                >
                  The list below contains all available member groups for your organisation. You can manage users associated to each group by selecting them from the list below.
                </p>
                <div
                  class="el-form-layout-has-margin el-fade-in el-form-layout"
                >
                  <div
                    class="mocked-styled-135 el-input-wrap-full"
                  >
                    <div
                      class="el-mb3 el-input-group"
                    >
                      <input
                        aria-label="Input type undefined"
                        class="mocked-styled-38 el-input"
                        id="test-static-id"
                        placeholder="Search"
                      />
                      <span
                        class="mocked-styled-4 el-icon"
                        style="font-size: 1rem;"
                      >
                        <svg
                          fill="none"
                          height="1em"
                          role="img"
                          style="font-size: 1rem;"
                          title="Icon image with name searchSystem"
                          viewBox="0 0 20 20"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="m19.756 18.578-5.688-5.687a7.88 7.88 0 0 0 1.765-4.973C15.833 3.553 12.281 0 7.917 0S0 3.553 0 7.918s3.552 7.916 7.917 7.916a7.88 7.88 0 0 0 4.973-1.765l5.687 5.688a.83.83 0 0 0 1.179 0 .83.83 0 0 0 0-1.179m-11.84-4.41a6.256 6.256 0 0 1-6.25-6.25 6.256 6.256 0 0 1 6.25-6.25 6.256 6.256 0 0 1 6.25 6.25 6.256 6.256 0 0 1-6.25 6.25"
                            fill="currentColor"
                          />
                        </svg>
                      </span>
                      <label
                        class="mocked-styled-41 el-label"
                        for="test-static-id"
                      >
                        Users
                      </label>
                    </div>
                    <div
                      class="mocked-styled-58 el-multi-select-input-wrapper"
                    >
                      <input
                        class="mocked-styled-57 el-multi-select-input"
                        id="user-groups-ids-ReapitUserAdmin"
                        name="userIds"
                      />
                      <div
                        aria-label="Multi selected options"
                        class="mocked-styled-55 el-multi-select-selected"
                        role="listbox"
                      >
                        <input
                          aria-checked="true"
                          aria-hidden="true"
                          checked=""
                          class="mocked-styled-52 el-multi-select-checkbox"
                          id="multi-select-chip-MarketplaceAdmin"
                          role="option"
                          type="checkbox"
                        />
                        <label
                          class="mocked-styled-53 el-multi-select-label"
                          for="multi-select-chip-MarketplaceAdmin"
                          role="option"
                          tabindex="0"
                        />
                        <input
                          aria-checked="true"
                          aria-hidden="true"
                          checked=""
                          class="mocked-styled-52 el-multi-select-checkbox"
                          id="multi-select-chip-OrganisationAdmin"
                          role="option"
                          type="checkbox"
                        />
                        <label
                          class="mocked-styled-53 el-multi-select-label"
                          for="multi-select-chip-OrganisationAdmin"
                          role="option"
                          tabindex="0"
                        />
                        <input
                          aria-checked="true"
                          aria-hidden="true"
                          checked=""
                          class="mocked-styled-52 el-multi-select-checkbox"
                          id="multi-select-chip-ReapitUserAdmin"
                          role="option"
                          type="checkbox"
                        />
                        <label
                          class="mocked-styled-53 el-multi-select-label"
                          for="multi-select-chip-ReapitUserAdmin"
                          role="option"
                          tabindex="0"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="mocked-styled-2 el-button-group"
                >
                  <div
                    class="el-button-group-align-right el-button-group-inner"
                  >
                    <button
                      class="el-intent-neutral el-button"
                      type="button"
                    >
                      <div
                        class="mocked-styled-0 el-button-loader"
                      />
                      Cancel
                    </button>
                    <button
                      class="el-intent-primary el-button"
                      type="submit"
                    >
                      <div
                        class="mocked-styled-0 el-button-loader"
                      />
                      Submit
                    </button>
                  </div>
                </div>
              </form>
            </div>
          </div>
        </div>
      </div>
      <div
        class="mocked-styled-71 el-pagination-wrap"
      >
        <button
          aria-label="Previous"
          class="mocked-styled-74 el-pagination-button"
          data-testid="back-button"
          role="button"
          type="button"
        >
          <span
            class="el-icon-new el-icon"
          >
            <svg
              fill="none"
              height="1em"
              role="img"
              title="Icon image with name chevronLeft"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15.496 20.004a1 1 0 0 1-.71-.29l-6.99-7a1 1 0 0 1 0-1.42l6.99-7a1.002 1.002 0 0 1 1.678.45c.093.347-.006.716-.26.97l-6.291 6.29 6.292 6.29a1 1 0 0 1-.71 1.71"
                fill="currentColor"
              />
            </svg>
          </span>
        </button>
        <div
          class="mocked-styled-72 el-pagination-text"
        >
          <input
            aria-label="Current page number, edit to select page of 1 available"
            class="mocked-styled-73 el-pagination-input"
            value="1"
          />
           
          of 
          1
        </div>
        <button
          aria-label="Next"
          class="mocked-styled-74 el-pagination-button"
          data-testid="forward-button"
          role="button"
          type="button"
        >
          <span
            class="el-icon-new el-icon"
          >
            <svg
              fill="none"
              height="1em"
              role="img"
              title="Icon image with name chevronRight"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8.505 20.004a1 1 0 0 1-1.005-1 1 1 0 0 1 .295-.71l6.292-6.29-6.292-6.29a1.005 1.005 0 0 1 0-1.42 1 1 0 0 1 1.419 0l6.99 7a1 1 0 0 1 0 1.42l-6.99 7a1 1 0 0 1-.71.29"
                fill="currentColor"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mocked-styled-93 el-snack-holder"
    />
    <div
      class="el-flex-container el-flex-justify-between"
    >
      <h1
        class="el-text-base el-title"
      >
        SOME_NAME
         User Groups
      </h1>
    </div>
    <div
      class="el-fade-in el-mb11 el-table"
      data-has-call-to-action="false"
      data-has-expandable-action="true"
      data-num-columns-excl-action-col="3"
      role="table"
    >
      <div
        class="mocked-styled-101 el-table-headers-row"
        role="row"
      >
        <div
          aria-label="Group Name"
          class="mocked-styled-102 el-table-header"
          role="columnheader"
        >
          Group Name
        </div>
        <div
          aria-label="Description"
          class="mocked-styled-102 el-table-header"
          role="columnheader"
        >
          Description
        </div>
        <div
          aria-label="Member Count"
          class="mocked-styled-102 el-table-header"
          role="columnheader"
        >
          Member Count
        </div>
        <div
          class="mocked-styled-102 el-table-header"
          role="columnheader"
        >
          <span
            class="el-intent-default el-icon-new el-icon"
          >
            <svg
              fill="none"
              height="1em"
              role="img"
              title="Icon image with name settings"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M18.917 12.88c.08-.584.08-1.176 0-1.76l2.06-1.85a1 1 0 0 0 .25-1.27l-1.18-2a1 1 0 0 0-1.19-.45l-2.65.9a7.2 7.2 0 0 0-1.52-.89l-.55-2.76a1 1 0 0 0-1-.8h-2.34a1 1 0 0 0-1 .8l-.53 2.74a7.5 7.5 0 0 0-1.52.89l-2.65-.9a1 1 0 0 0-1.19.47l-1.18 2a1 1 0 0 0 .25 1.27l2.1 1.85a6.5 6.5 0 0 0 0 1.76l-2.1 1.85a1 1 0 0 0-.25 1.27l1.18 2a1 1 0 0 0 1.19.45l2.65-.9c.47.356.98.654 1.52.89l.55 2.74a1 1 0 0 0 1 .8h2.36a1 1 0 0 0 1-.8l.55-2.74a7.2 7.2 0 0 0 1.52-.89l2.65.9a1 1 0 0 0 1.15-.45l1.18-2a1 1 0 0 0-.25-1.27zM11.977 15a3 3 0 1 1 0-6 3 3 0 0 1 0 6"
                fill="currentColor"
              />
            </svg>
          </span>
        </div>
      </div>
      <div
        class="mocked-styled-110 el-table-row-container"
        role="row"
      >
        <div
          class="mocked-styled-103 el-table-row"
        >
          <div
            class="el-table-cell-has-dark-text el-table-cell"
            role="cell"
          >
            <div
              class="mocked-styled-111 el-table-cell-content"
              data-narrow-label="Group Name"
            >
              MarketplaceAdmin
            </div>
          </div>
          <div
            class="el-table-cell-has-dark-text el-table-cell"
            role="cell"
          >
            <div
              class="mocked-styled-111 el-table-cell-content"
              data-narrow-label="Description"
            >
              Users who can administer the Reapit Marketplace for an organisation or organisation office group
            </div>
          </div>
          <div
            class="el-table-cell-has-dark-text el-table-cell"
            role="cell"
          >
            <div
              class="mocked-styled-111 el-table-cell-content"
              data-narrow-label="Member Count"
            >
              4
            </div>
          </div>
          <div
            class="mocked-styled-109 el-table-expandable-row-trigger-cell"
            role="cell"
            tabindex="0"
          >
            <span
              class="el-intent-default el-icon-new el-icon"
            >
              <svg
                fill="none"
                height="1em"
                role="img"
                title="Icon image with name more"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0M12 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4M19 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4"
                  fill="currentColor"
                />
              </svg>
            </span>
          </div>
        </div>
        <div
          class="mocked-styled-113 el-table-expandable-row"
        >
          <div
            class="mocked-styled-114 el-table-expandable-container"
          >
            <form
              class="el-p8"
            >
              <h2
                class="el-text-base el-subtitle"
              >
                Edit User Group
              </h2>
              <p
                class="el-text-base el-body-text el-has-grey-text el-has-section-margin"
              >
                The list below contains all available member groups for your organisation. You can manage users associated to each group by selecting them from the list below.
              </p>
              <div
                class="el-form-layout-has-margin el-fade-in el-form-layout"
              >
                <div
                  class="mocked-styled-135 el-input-wrap-full"
                >
                  <div
                    class="el-mb3 el-input-group"
                  >
                    <input
                      aria-label="Input type undefined"
                      class="mocked-styled-38 el-input"
                      id="test-static-id"
                      placeholder="Search"
                    />
                    <span
                      class="mocked-styled-4 el-icon"
                      style="font-size: 1rem;"
                    >
                      <svg
                        fill="none"
                        height="1em"
                        role="img"
                        style="font-size: 1rem;"
                        title="Icon image with name searchSystem"
                        viewBox="0 0 20 20"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="m19.756 18.578-5.688-5.687a7.88 7.88 0 0 0 1.765-4.973C15.833 3.553 12.281 0 7.917 0S0 3.553 0 7.918s3.552 7.916 7.917 7.916a7.88 7.88 0 0 0 4.973-1.765l5.687 5.688a.83.83 0 0 0 1.179 0 .83.83 0 0 0 0-1.179m-11.84-4.41a6.256 6.256 0 0 1-6.25-6.25 6.256 6.256 0 0 1 6.25-6.25 6.256 6.256 0 0 1 6.25 6.25 6.256 6.256 0 0 1-6.25 6.25"
                          fill="currentColor"
                        />
                      </svg>
                    </span>
                    <label
                      class="mocked-styled-41 el-label"
                      for="test-static-id"
                    >
                      Users
                    </label>
                  </div>
                  <div
                    class="mocked-styled-58 el-multi-select-input-wrapper"
                  >
                    <input
                      class="mocked-styled-57 el-multi-select-input"
                      id="user-groups-ids-MarketplaceAdmin"
                      name="userIds"
                    />
                    <div
                      aria-label="Multi selected options"
                      class="mocked-styled-55 el-multi-select-selected"
                      role="listbox"
                    >
                      <input
                        aria-checked="true"
                        aria-hidden="true"
                        checked=""
                        class="mocked-styled-52 el-multi-select-checkbox"
                        id="multi-select-chip-MarketplaceAdmin"
                        role="option"
                        type="checkbox"
                      />
                      <label
                        class="mocked-styled-53 el-multi-select-label"
                        for="multi-select-chip-MarketplaceAdmin"
                        role="option"
                        tabindex="0"
                      />
                      <input
                        aria-checked="true"
                        aria-hidden="true"
                        checked=""
                        class="mocked-styled-52 el-multi-select-checkbox"
                        id="multi-select-chip-OrganisationAdmin"
                        role="option"
                        type="checkbox"
                      />
                      <label
                        class="mocked-styled-53 el-multi-select-label"
                        for="multi-select-chip-OrganisationAdmin"
                        role="option"
                        tabindex="0"
                      />
                      <input
                        aria-checked="true"
                        aria-hidden="true"
                        checked=""
                        class="mocked-styled-52 el-multi-select-checkbox"
                        id="multi-select-chip-ReapitUserAdmin"
                        role="option"
                        type="checkbox"
                      />
                      <label
                        class="mocked-styled-53 el-multi-select-label"
                        for="multi-select-chip-ReapitUserAdmin"
                        role="option"
                        tabindex="0"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="mocked-styled-2 el-button-group"
              >
                <div
                  class="el-button-group-align-right el-button-group-inner"
                >
                  <button
                    class="el-intent-neutral el-button"
                    type="button"
                  >
                    <div
                      class="mocked-styled-0 el-button-loader"
                    />
                    Cancel
                  </button>
                  <button
                    class="el-intent-primary el-button"
                    type="submit"
                  >
                    <div
                      class="mocked-styled-0 el-button-loader"
                    />
                    Submit
                  </button>
                </div>
              </div>
            </form>
          </div>
        </div>
      </div>
      <div
        class="mocked-styled-110 el-table-row-container"
        role="row"
      >
        <div
          class="mocked-styled-103 el-table-row"
        >
          <div
            class="el-table-cell-has-dark-text el-table-cell"
            role="cell"
          >
            <div
              class="mocked-styled-111 el-table-cell-content"
              data-narrow-label="Group Name"
            >
              OrganisationAdmin
            </div>
          </div>
          <div
            class="el-table-cell-has-dark-text el-table-cell"
            role="cell"
          >
            <div
              class="mocked-styled-111 el-table-cell-content"
              data-narrow-label="Description"
            >
              Users who can administer an organisation
            </div>
          </div>
          <div
            class="el-table-cell-has-dark-text el-table-cell"
            role="cell"
          >
            <div
              class="mocked-styled-111 el-table-cell-content"
              data-narrow-label="Member Count"
            >
              1
            </div>
          </div>
          <div
            class="mocked-styled-109 el-table-expandable-row-trigger-cell"
            role="cell"
            tabindex="0"
          >
            <span
              class="el-intent-default el-icon-new el-icon"
            >
              <svg
                fill="none"
                height="1em"
                role="img"
                title="Icon image with name more"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0M12 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4M19 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4"
                  fill="currentColor"
                />
              </svg>
            </span>
          </div>
        </div>
        <div
          class="mocked-styled-113 el-table-expandable-row"
        >
          <div
            class="mocked-styled-114 el-table-expandable-container"
          >
            <form
              class="el-p8"
            >
              <h2
                class="el-text-base el-subtitle"
              >
                Edit User Group
              </h2>
              <p
                class="el-text-base el-body-text el-has-grey-text el-has-section-margin"
              >
                The list below contains all available member groups for your organisation. You can manage users associated to each group by selecting them from the list below.
              </p>
              <div
                class="el-form-layout-has-margin el-fade-in el-form-layout"
              >
                <div
                  class="mocked-styled-135 el-input-wrap-full"
                >
                  <div
                    class="el-mb3 el-input-group"
                  >
                    <input
                      aria-label="Input type undefined"
                      class="mocked-styled-38 el-input"
                      id="test-static-id"
                      placeholder="Search"
                    />
                    <span
                      class="mocked-styled-4 el-icon"
                      style="font-size: 1rem;"
                    >
                      <svg
                        fill="none"
                        height="1em"
                        role="img"
                        style="font-size: 1rem;"
                        title="Icon image with name searchSystem"
                        viewBox="0 0 20 20"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="m19.756 18.578-5.688-5.687a7.88 7.88 0 0 0 1.765-4.973C15.833 3.553 12.281 0 7.917 0S0 3.553 0 7.918s3.552 7.916 7.917 7.916a7.88 7.88 0 0 0 4.973-1.765l5.687 5.688a.83.83 0 0 0 1.179 0 .83.83 0 0 0 0-1.179m-11.84-4.41a6.256 6.256 0 0 1-6.25-6.25 6.256 6.256 0 0 1 6.25-6.25 6.256 6.256 0 0 1 6.25 6.25 6.256 6.256 0 0 1-6.25 6.25"
                          fill="currentColor"
                        />
                      </svg>
                    </span>
                    <label
                      class="mocked-styled-41 el-label"
                      for="test-static-id"
                    >
                      Users
                    </label>
                  </div>
                  <div
                    class="mocked-styled-58 el-multi-select-input-wrapper"
                  >
                    <input
                      class="mocked-styled-57 el-multi-select-input"
                      id="user-groups-ids-OrganisationAdmin"
                      name="userIds"
                    />
                    <div
                      aria-label="Multi selected options"
                      class="mocked-styled-55 el-multi-select-selected"
                      role="listbox"
                    >
                      <input
                        aria-checked="true"
                        aria-hidden="true"
                        checked=""
                        class="mocked-styled-52 el-multi-select-checkbox"
                        id="multi-select-chip-MarketplaceAdmin"
                        role="option"
                        type="checkbox"
                      />
                      <label
                        class="mocked-styled-53 el-multi-select-label"
                        for="multi-select-chip-MarketplaceAdmin"
                        role="option"
                        tabindex="0"
                      />
                      <input
                        aria-checked="true"
                        aria-hidden="true"
                        checked=""
                        class="mocked-styled-52 el-multi-select-checkbox"
                        id="multi-select-chip-OrganisationAdmin"
                        role="option"
                        type="checkbox"
                      />
                      <label
                        class="mocked-styled-53 el-multi-select-label"
                        for="multi-select-chip-OrganisationAdmin"
                        role="option"
                        tabindex="0"
                      />
                      <input
                        aria-checked="true"
                        aria-hidden="true"
                        checked=""
                        class="mocked-styled-52 el-multi-select-checkbox"
                        id="multi-select-chip-ReapitUserAdmin"
                        role="option"
                        type="checkbox"
                      />
                      <label
                        class="mocked-styled-53 el-multi-select-label"
                        for="multi-select-chip-ReapitUserAdmin"
                        role="option"
                        tabindex="0"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="mocked-styled-2 el-button-group"
              >
                <div
                  class="el-button-group-align-right el-button-group-inner"
                >
                  <button
                    class="el-intent-neutral el-button"
                    type="button"
                  >
                    <div
                      class="mocked-styled-0 el-button-loader"
                    />
                    Cancel
                  </button>
                  <button
                    class="el-intent-primary el-button"
                    type="submit"
                  >
                    <div
                      class="mocked-styled-0 el-button-loader"
                    />
                    Submit
                  </button>
                </div>
              </div>
            </form>
          </div>
        </div>
      </div>
      <div
        class="mocked-styled-110 el-table-row-container"
        role="row"
      >
        <div
          class="mocked-styled-103 el-table-row"
        >
          <div
            class="el-table-cell-has-dark-text el-table-cell"
            role="cell"
          >
            <div
              class="mocked-styled-111 el-table-cell-content"
              data-narrow-label="Group Name"
            >
              ReapitUserAdmin
            </div>
          </div>
          <div
            class="el-table-cell-has-dark-text el-table-cell"
            role="cell"
          >
            <div
              class="mocked-styled-111 el-table-cell-content"
              data-narrow-label="Description"
            >
              Users who are Reapit customers who can perform admin Foundations actions
            </div>
          </div>
          <div
            class="el-table-cell-has-dark-text el-table-cell"
            role="cell"
          >
            <div
              class="mocked-styled-111 el-table-cell-content"
              data-narrow-label="Member Count"
            >
              3
            </div>
          </div>
          <div
            class="mocked-styled-109 el-table-expandable-row-trigger-cell"
            role="cell"
            tabindex="0"
          >
            <span
              class="el-intent-default el-icon-new el-icon"
            >
              <svg
                fill="none"
                height="1em"
                role="img"
                title="Icon image with name more"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0M12 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4M19 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4"
                  fill="currentColor"
                />
              </svg>
            </span>
          </div>
        </div>
        <div
          class="mocked-styled-113 el-table-expandable-row"
        >
          <div
            class="mocked-styled-114 el-table-expandable-container"
          >
            <form
              class="el-p8"
            >
              <h2
                class="el-text-base el-subtitle"
              >
                Edit User Group
              </h2>
              <p
                class="el-text-base el-body-text el-has-grey-text el-has-section-margin"
              >
                The list below contains all available member groups for your organisation. You can manage users associated to each group by selecting them from the list below.
              </p>
              <div
                class="el-form-layout-has-margin el-fade-in el-form-layout"
              >
                <div
                  class="mocked-styled-135 el-input-wrap-full"
                >
                  <div
                    class="el-mb3 el-input-group"
                  >
                    <input
                      aria-label="Input type undefined"
                      class="mocked-styled-38 el-input"
                      id="test-static-id"
                      placeholder="Search"
                    />
                    <span
                      class="mocked-styled-4 el-icon"
                      style="font-size: 1rem;"
                    >
                      <svg
                        fill="none"
                        height="1em"
                        role="img"
                        style="font-size: 1rem;"
                        title="Icon image with name searchSystem"
                        viewBox="0 0 20 20"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="m19.756 18.578-5.688-5.687a7.88 7.88 0 0 0 1.765-4.973C15.833 3.553 12.281 0 7.917 0S0 3.553 0 7.918s3.552 7.916 7.917 7.916a7.88 7.88 0 0 0 4.973-1.765l5.687 5.688a.83.83 0 0 0 1.179 0 .83.83 0 0 0 0-1.179m-11.84-4.41a6.256 6.256 0 0 1-6.25-6.25 6.256 6.256 0 0 1 6.25-6.25 6.256 6.256 0 0 1 6.25 6.25 6.256 6.256 0 0 1-6.25 6.25"
                          fill="currentColor"
                        />
                      </svg>
                    </span>
                    <label
                      class="mocked-styled-41 el-label"
                      for="test-static-id"
                    >
                      Users
                    </label>
                  </div>
                  <div
                    class="mocked-styled-58 el-multi-select-input-wrapper"
                  >
                    <input
                      class="mocked-styled-57 el-multi-select-input"
                      id="user-groups-ids-ReapitUserAdmin"
                      name="userIds"
                    />
                    <div
                      aria-label="Multi selected options"
                      class="mocked-styled-55 el-multi-select-selected"
                      role="listbox"
                    >
                      <input
                        aria-checked="true"
                        aria-hidden="true"
                        checked=""
                        class="mocked-styled-52 el-multi-select-checkbox"
                        id="multi-select-chip-MarketplaceAdmin"
                        role="option"
                        type="checkbox"
                      />
                      <label
                        class="mocked-styled-53 el-multi-select-label"
                        for="multi-select-chip-MarketplaceAdmin"
                        role="option"
                        tabindex="0"
                      />
                      <input
                        aria-checked="true"
                        aria-hidden="true"
                        checked=""
                        class="mocked-styled-52 el-multi-select-checkbox"
                        id="multi-select-chip-OrganisationAdmin"
                        role="option"
                        type="checkbox"
                      />
                      <label
                        class="mocked-styled-53 el-multi-select-label"
                        for="multi-select-chip-OrganisationAdmin"
                        role="option"
                        tabindex="0"
                      />
                      <input
                        aria-checked="true"
                        aria-hidden="true"
                        checked=""
                        class="mocked-styled-52 el-multi-select-checkbox"
                        id="multi-select-chip-ReapitUserAdmin"
                        role="option"
                        type="checkbox"
                      />
                      <label
                        class="mocked-styled-53 el-multi-select-label"
                        for="multi-select-chip-ReapitUserAdmin"
                        role="option"
                        tabindex="0"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="mocked-styled-2 el-button-group"
              >
                <div
                  class="el-button-group-align-right el-button-group-inner"
                >
                  <button
                    class="el-intent-neutral el-button"
                    type="button"
                  >
                    <div
                      class="mocked-styled-0 el-button-loader"
                    />
                    Cancel
                  </button>
                  <button
                    class="el-intent-primary el-button"
                    type="submit"
                  >
                    <div
                      class="mocked-styled-0 el-button-loader"
                    />
                    Submit
                  </button>
                </div>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
    <div
      class="mocked-styled-71 el-pagination-wrap"
    >
      <button
        aria-label="Previous"
        class="mocked-styled-74 el-pagination-button"
        data-testid="back-button"
        role="button"
        type="button"
      >
        <span
          class="el-icon-new el-icon"
        >
          <svg
            fill="none"
            height="1em"
            role="img"
            title="Icon image with name chevronLeft"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15.496 20.004a1 1 0 0 1-.71-.29l-6.99-7a1 1 0 0 1 0-1.42l6.99-7a1.002 1.002 0 0 1 1.678.45c.093.347-.006.716-.26.97l-6.291 6.29 6.292 6.29a1 1 0 0 1-.71 1.71"
              fill="currentColor"
            />
          </svg>
        </span>
      </button>
      <div
        class="mocked-styled-72 el-pagination-text"
      >
        <input
          aria-label="Current page number, edit to select page of 1 available"
          class="mocked-styled-73 el-pagination-input"
          value="1"
        />
         
        of 
        1
      </div>
      <button
        aria-label="Next"
        class="mocked-styled-74 el-pagination-button"
        data-testid="forward-button"
        role="button"
        type="button"
      >
        <span
          class="el-icon-new el-icon"
        >
          <svg
            fill="none"
            height="1em"
            role="img"
            title="Icon image with name chevronRight"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8.505 20.004a1 1 0 0 1-1.005-1 1 1 0 0 1 .295-.71l6.292-6.29-6.292-6.29a1.005 1.005 0 0 1 0-1.42 1 1 0 0 1 1.419 0l6.99 7a1 1 0 0 1 0 1.42l-6.99 7a1 1 0 0 1-.71.29"
              fill="currentColor"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`UserGroupsTab should match a snapshot where there is data but no user groups 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mocked-styled-93 el-snack-holder"
      />
      <div
        class="el-flex-container el-flex-justify-between"
      >
        <h1
          class="el-text-base el-title"
        >
          SOME_NAME
           User Groups
        </h1>
      </div>
      <div
        class="el-intent-primary el-is-active el-pn-is-full-width el-pn-is-inline el-persistent-notification"
        role="status"
      >
        <div
          class="el-pn-icon"
          data-testid="close-icon"
        >
          <span
            class="el-icon-new el-icon"
            style="font-size: 1.25rem;"
          >
            <svg
              fill="none"
              height="1em"
              role="img"
              style="font-size: 1.25rem;"
              title="Icon image with name info"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10A10 10 0 0 0 12 2m1.143 15.714h-2.286v-6h2.286zm-1.143-8a1.714 1.714 0 1 1 0-3.428 1.714 1.714 0 0 1 0 3.428"
                fill="currentColor"
              />
            </svg>
          </span>
        </div>
        <div
          aria-live="polite"
          class="el-pn-content"
        >
          No users found
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mocked-styled-93 el-snack-holder"
    />
    <div
      class="el-flex-container el-flex-justify-between"
    >
      <h1
        class="el-text-base el-title"
      >
        SOME_NAME
         User Groups
      </h1>
    </div>
    <div
      class="el-intent-primary el-is-active el-pn-is-full-width el-pn-is-inline el-persistent-notification"
      role="status"
    >
      <div
        class="el-pn-icon"
        data-testid="close-icon"
      >
        <span
          class="el-icon-new el-icon"
          style="font-size: 1.25rem;"
        >
          <svg
            fill="none"
            height="1em"
            role="img"
            style="font-size: 1.25rem;"
            title="Icon image with name info"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10A10 10 0 0 0 12 2m1.143 15.714h-2.286v-6h2.286zm-1.143-8a1.714 1.714 0 1 1 0-3.428 1.714 1.714 0 0 1 0 3.428"
              fill="currentColor"
            />
          </svg>
        </span>
      </div>
      <div
        aria-live="polite"
        class="el-pn-content"
      >
        No users found
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`UserGroupsTab should match a snapshot where there is no orgId 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mocked-styled-93 el-snack-holder"
      />
      <div
        class="el-flex-container el-flex-justify-between"
      >
        <h1
          class="el-text-base el-title"
        >
          User Groups
        </h1>
      </div>
      <div
        class="el-intent-primary el-is-active el-pn-is-full-width el-pn-is-inline el-persistent-notification"
        role="status"
      >
        <div
          class="el-pn-icon"
          data-testid="close-icon"
        >
          <span
            class="el-icon-new el-icon"
            style="font-size: 1.25rem;"
          >
            <svg
              fill="none"
              height="1em"
              role="img"
              style="font-size: 1.25rem;"
              title="Icon image with name info"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10A10 10 0 0 0 12 2m1.143 15.714h-2.286v-6h2.286zm-1.143-8a1.714 1.714 0 1 1 0-3.428 1.714 1.714 0 0 1 0 3.428"
                fill="currentColor"
              />
            </svg>
          </span>
        </div>
        <div
          aria-live="polite"
          class="el-pn-content"
        >
          No organisation selected. You need to select an organisation to view user groups.
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mocked-styled-93 el-snack-holder"
    />
    <div
      class="el-flex-container el-flex-justify-between"
    >
      <h1
        class="el-text-base el-title"
      >
        User Groups
      </h1>
    </div>
    <div
      class="el-intent-primary el-is-active el-pn-is-full-width el-pn-is-inline el-persistent-notification"
      role="status"
    >
      <div
        class="el-pn-icon"
        data-testid="close-icon"
      >
        <span
          class="el-icon-new el-icon"
          style="font-size: 1.25rem;"
        >
          <svg
            fill="none"
            height="1em"
            role="img"
            style="font-size: 1.25rem;"
            title="Icon image with name info"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10A10 10 0 0 0 12 2m1.143 15.714h-2.286v-6h2.286zm-1.143-8a1.714 1.714 0 1 1 0-3.428 1.714 1.714 0 0 1 0 3.428"
              fill="currentColor"
            />
          </svg>
        </span>
      </div>
      <div
        aria-live="polite"
        class="el-pn-content"
      >
        No organisation selected. You need to select an organisation to view user groups.
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
